--- a/ListenAndWrite/Content/NguoiDungCssLayout/pageNewMore.css
+++ b/ListenAndWrite/Content/NguoiDungCssLayout/pageNewMore.css
@@ -1,4 +1,4 @@
-﻿div#answer {
+﻿div#textareaDifferences {
     display: block;
     font-size: 20px;
     color: blue;
@@ -13,7 +13,7 @@
     padding: 5px;
 }
 
-textarea#audioScriptTmode {
+textarea#textareaAfter {
     width: 500px;
     height: 150px;
     border: 7px solid #880000;
