Hoàn Thiện Hệ Thống

--- a/ListenAndWrite/Views/Audio/ListenNewMore.cshtml
+++ b/ListenAndWrite/Views/Audio/ListenNewMore.cshtml
@@ -63,8 +63,8 @@
                                                     </div>
 
                                                     <div id="slimprogress" style="width:525px; height:3px;"></div>
-                                                    <textarea class="input" id="text1" style="display: none;">@item.name</textarea>
-                                                    <textarea class="input" cols="38" rows="3" id="audioScriptTmode">Gõ cái mày nghe thấy vào đây đi</textarea>
+                                                    <textarea class="input" id="text1" style="display: none;">@item.text</textarea>
+                                                    <textarea class="input" cols="38" rows="3" id="audioScriptTmode">Enter text in here</textarea>
                                                     <div id="audioplayer">
                                                         <div id="pButton" class="play"></div>
                                                     </div>
